Shortened the gap in the new flow loayout (used in event dialog) Fixed type for update() function in datasource new no longer requireing the ID property List / Table have empty state TextField autocomplete type is sting (There was no AutoFill type) the 'change' event will fire when an option of the SelectField is selected Small fixed for the RecurrenceField 'setvalue' event will also fire when user changes the field Fix for DateField when empty value but with timefield attached.

--- a/style/_layout.scss
+++ b/style/_layout.scss
@@ -25,11 +25,14 @@
 	flex-flow: row wrap !important;
 	align-content: flex-start;
 	align-items: start;
-	gap: dp(16);
+	gap: dp(8);
 	> * {
 		padding:0;
 		margin:0;
 		width:100%;
+	}
+	.goui-form-field, .goui-button {
+		margin-bottom:0;
 	}
 }
 
